--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://ezefaz.github.io/portfolio", 
+  "homepage": "https://ezefaz.github.io/portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
@@ -14,6 +14,7 @@
     "react-intersection-observer": "^9.3.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.0",
+    "react-tilt": "^0.1.4",
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^0.2.4"
